Instructions on how to get the track data in Colab

--- a/Christophe_branch/test_get_features_API_colab_HowTo.ipynb
+++ b/Christophe_branch/test_get_features_API_colab_HowTo.ipynb
@@ -167,7 +167,7 @@
     "a=2000000 + 0  # In this example, the slice will start at 2,000,000\n",
     "\n",
     "# This is the end of the slice of tracks to be queried\n",
-    "b=2100000 # b=2262292 is the max value when doing the last slice"
+    "b=2100000 + 1 # b=2262292 is the max value when doing the last slice"
    ]
   },
   {
@@ -630,418 +630,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>danceability</th>\n",
-       "      <th>energy</th>\n",
-       "      <th>key</th>\n",
-       "      <th>loudness</th>\n",
-       "      <th>mode</th>\n",
-       "      <th>speechiness</th>\n",
-       "      <th>acousticness</th>\n",
-       "      <th>instrumentalness</th>\n",
-       "      <th>liveness</th>\n",
-       "      <th>valence</th>\n",
-       "      <th>tempo</th>\n",
-       "      <th>type</th>\n",
-       "      <th>uri</th>\n",
-       "      <th>track_href</th>\n",
-       "      <th>analysis_url</th>\n",
-       "      <th>duration_ms</th>\n",
-       "      <th>time_signature</th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>6KaZC1JpPRq9CNZ3X8jBCM</th>\n",
-       "      <td>0.591</td>\n",
-       "      <td>0.721</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-7.960</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0308</td>\n",
-       "      <td>0.019700</td>\n",
-       "      <td>0.000244</td>\n",
-       "      <td>0.1170</td>\n",
-       "      <td>0.4340</td>\n",
-       "      <td>94.053</td>\n",
-       "      <td>audio_features</td>\n",
-       "      <td>spotify:track:6KaZC1JpPRq9CNZ3X8jBCM</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/6KaZC1JpPRq9...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/6KaZ...</td>\n",
-       "      <td>246933.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7hiqCnFcOBFAqZSf3AOY8a</th>\n",
-       "      <td>0.399</td>\n",
-       "      <td>0.955</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>-3.662</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0822</td>\n",
-       "      <td>0.002600</td>\n",
-       "      <td>0.376000</td>\n",
-       "      <td>0.4250</td>\n",
-       "      <td>0.6790</td>\n",
-       "      <td>156.583</td>\n",
-       "      <td>audio_features</td>\n",
-       "      <td>spotify:track:7hiqCnFcOBFAqZSf3AOY8a</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/7hiqCnFcOBFA...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/7hiq...</td>\n",
-       "      <td>165549.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1SxVwlqUaz6PdQSqjclahn</th>\n",
-       "      <td>0.573</td>\n",
-       "      <td>0.915</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-3.658</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0532</td>\n",
-       "      <td>0.809000</td>\n",
-       "      <td>0.304000</td>\n",
-       "      <td>0.3240</td>\n",
-       "      <td>0.7580</td>\n",
-       "      <td>105.323</td>\n",
-       "      <td>audio_features</td>\n",
-       "      <td>spotify:track:1SxVwlqUaz6PdQSqjclahn</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/1SxVwlqUaz6P...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/1SxV...</td>\n",
-       "      <td>230000.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1XGX6lvmT464sVpJKTF3aV</th>\n",
-       "      <td>0.492</td>\n",
-       "      <td>0.801</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-7.679</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0357</td>\n",
-       "      <td>0.008960</td>\n",
-       "      <td>0.000120</td>\n",
-       "      <td>0.1870</td>\n",
-       "      <td>0.4910</td>\n",
-       "      <td>74.969</td>\n",
-       "      <td>audio_features</td>\n",
-       "      <td>spotify:track:1XGX6lvmT464sVpJKTF3aV</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/1XGX6lvmT464...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/1XGX...</td>\n",
-       "      <td>229600.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>317d1IqYa8JhV8BGVDtgwZ</th>\n",
-       "      <td>0.219</td>\n",
-       "      <td>0.367</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-9.696</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0285</td>\n",
-       "      <td>0.072600</td>\n",
-       "      <td>0.000006</td>\n",
-       "      <td>0.0832</td>\n",
-       "      <td>0.1070</td>\n",
-       "      <td>148.622</td>\n",
-       "      <td>audio_features</td>\n",
-       "      <td>spotify:track:317d1IqYa8JhV8BGVDtgwZ</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/317d1IqYa8Jh...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/317d...</td>\n",
-       "      <td>274547.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3eOVEI308JAMgXITGVFmPb</th>\n",
-       "      <td>0.456</td>\n",
-       "      <td>0.801</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>-5.092</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0314</td>\n",
-       "      <td>0.000061</td>\n",
-       "      <td>0.527000</td>\n",
-       "      <td>0.1170</td>\n",
-       "      <td>0.0882</td>\n",
-       "      <td>103.001</td>\n",
-       "      <td>audio_features</td>\n",
-       "      <td>spotify:track:3eOVEI308JAMgXITGVFmPb</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/3eOVEI308JAM...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/3eOV...</td>\n",
-       "      <td>279400.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6HQ7ZkvyCDiVpOCNYgFIYF</th>\n",
-       "      <td>0.571</td>\n",
-       "      <td>0.971</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-4.176</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0589</td>\n",
-       "      <td>0.000014</td>\n",
-       "      <td>0.422000</td>\n",
-       "      <td>0.2150</td>\n",
-       "      <td>0.0410</td>\n",
-       "      <td>128.004</td>\n",
-       "      <td>audio_features</td>\n",
-       "      <td>spotify:track:6HQ7ZkvyCDiVpOCNYgFIYF</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/6HQ7ZkvyCDiV...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/6HQ7...</td>\n",
-       "      <td>210000.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0c2zOONeNgttBOpHp8tw03</th>\n",
-       "      <td>0.644</td>\n",
-       "      <td>0.825</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>-3.565</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0651</td>\n",
-       "      <td>0.570000</td>\n",
-       "      <td>0.053000</td>\n",
-       "      <td>0.1080</td>\n",
-       "      <td>0.3490</td>\n",
-       "      <td>128.058</td>\n",
-       "      <td>audio_features</td>\n",
-       "      <td>spotify:track:0c2zOONeNgttBOpHp8tw03</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/0c2zOONeNgtt...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/0c2z...</td>\n",
-       "      <td>390005.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0cjGJeCeYxNP8duvTxJJDX</th>\n",
-       "      <td>0.200</td>\n",
-       "      <td>0.156</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>-19.319</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0388</td>\n",
-       "      <td>0.952000</td>\n",
-       "      <td>0.980000</td>\n",
-       "      <td>0.1080</td>\n",
-       "      <td>0.0378</td>\n",
-       "      <td>129.601</td>\n",
-       "      <td>audio_features</td>\n",
-       "      <td>spotify:track:0cjGJeCeYxNP8duvTxJJDX</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/0cjGJeCeYxNP...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/0cjG...</td>\n",
-       "      <td>124400.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>714JJ27SmuQEghyVauzMPj</th>\n",
-       "      <td>0.797</td>\n",
-       "      <td>0.874</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-3.155</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0347</td>\n",
-       "      <td>0.600000</td>\n",
-       "      <td>0.000138</td>\n",
-       "      <td>0.0398</td>\n",
-       "      <td>0.9720</td>\n",
-       "      <td>94.469</td>\n",
-       "      <td>audio_features</td>\n",
-       "      <td>spotify:track:714JJ27SmuQEghyVauzMPj</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/714JJ27SmuQE...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/714J...</td>\n",
-       "      <td>226893.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>90100 rows × 18 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        danceability  energy   key  loudness  mode  \\\n",
-       "id                                                                   \n",
-       "6KaZC1JpPRq9CNZ3X8jBCM         0.591   0.721   2.0    -7.960   1.0   \n",
-       "7hiqCnFcOBFAqZSf3AOY8a         0.399   0.955  11.0    -3.662   0.0   \n",
-       "1SxVwlqUaz6PdQSqjclahn         0.573   0.915   1.0    -3.658   1.0   \n",
-       "1XGX6lvmT464sVpJKTF3aV         0.492   0.801   2.0    -7.679   1.0   \n",
-       "317d1IqYa8JhV8BGVDtgwZ         0.219   0.367   0.0    -9.696   0.0   \n",
-       "...                              ...     ...   ...       ...   ...   \n",
-       "3eOVEI308JAMgXITGVFmPb         0.456   0.801   7.0    -5.092   0.0   \n",
-       "6HQ7ZkvyCDiVpOCNYgFIYF         0.571   0.971   2.0    -4.176   1.0   \n",
-       "0c2zOONeNgttBOpHp8tw03         0.644   0.825  11.0    -3.565   1.0   \n",
-       "0cjGJeCeYxNP8duvTxJJDX         0.200   0.156   6.0   -19.319   1.0   \n",
-       "714JJ27SmuQEghyVauzMPj         0.797   0.874   0.0    -3.155   1.0   \n",
-       "\n",
-       "                        speechiness  acousticness  instrumentalness  liveness  \\\n",
-       "id                                                                              \n",
-       "6KaZC1JpPRq9CNZ3X8jBCM       0.0308      0.019700          0.000244    0.1170   \n",
-       "7hiqCnFcOBFAqZSf3AOY8a       0.0822      0.002600          0.376000    0.4250   \n",
-       "1SxVwlqUaz6PdQSqjclahn       0.0532      0.809000          0.304000    0.3240   \n",
-       "1XGX6lvmT464sVpJKTF3aV       0.0357      0.008960          0.000120    0.1870   \n",
-       "317d1IqYa8JhV8BGVDtgwZ       0.0285      0.072600          0.000006    0.0832   \n",
-       "...                             ...           ...               ...       ...   \n",
-       "3eOVEI308JAMgXITGVFmPb       0.0314      0.000061          0.527000    0.1170   \n",
-       "6HQ7ZkvyCDiVpOCNYgFIYF       0.0589      0.000014          0.422000    0.2150   \n",
-       "0c2zOONeNgttBOpHp8tw03       0.0651      0.570000          0.053000    0.1080   \n",
-       "0cjGJeCeYxNP8duvTxJJDX       0.0388      0.952000          0.980000    0.1080   \n",
-       "714JJ27SmuQEghyVauzMPj       0.0347      0.600000          0.000138    0.0398   \n",
-       "\n",
-       "                        valence    tempo            type  \\\n",
-       "id                                                         \n",
-       "6KaZC1JpPRq9CNZ3X8jBCM   0.4340   94.053  audio_features   \n",
-       "7hiqCnFcOBFAqZSf3AOY8a   0.6790  156.583  audio_features   \n",
-       "1SxVwlqUaz6PdQSqjclahn   0.7580  105.323  audio_features   \n",
-       "1XGX6lvmT464sVpJKTF3aV   0.4910   74.969  audio_features   \n",
-       "317d1IqYa8JhV8BGVDtgwZ   0.1070  148.622  audio_features   \n",
-       "...                         ...      ...             ...   \n",
-       "3eOVEI308JAMgXITGVFmPb   0.0882  103.001  audio_features   \n",
-       "6HQ7ZkvyCDiVpOCNYgFIYF   0.0410  128.004  audio_features   \n",
-       "0c2zOONeNgttBOpHp8tw03   0.3490  128.058  audio_features   \n",
-       "0cjGJeCeYxNP8duvTxJJDX   0.0378  129.601  audio_features   \n",
-       "714JJ27SmuQEghyVauzMPj   0.9720   94.469  audio_features   \n",
-       "\n",
-       "                                                         uri  \\\n",
-       "id                                                             \n",
-       "6KaZC1JpPRq9CNZ3X8jBCM  spotify:track:6KaZC1JpPRq9CNZ3X8jBCM   \n",
-       "7hiqCnFcOBFAqZSf3AOY8a  spotify:track:7hiqCnFcOBFAqZSf3AOY8a   \n",
-       "1SxVwlqUaz6PdQSqjclahn  spotify:track:1SxVwlqUaz6PdQSqjclahn   \n",
-       "1XGX6lvmT464sVpJKTF3aV  spotify:track:1XGX6lvmT464sVpJKTF3aV   \n",
-       "317d1IqYa8JhV8BGVDtgwZ  spotify:track:317d1IqYa8JhV8BGVDtgwZ   \n",
-       "...                                                      ...   \n",
-       "3eOVEI308JAMgXITGVFmPb  spotify:track:3eOVEI308JAMgXITGVFmPb   \n",
-       "6HQ7ZkvyCDiVpOCNYgFIYF  spotify:track:6HQ7ZkvyCDiVpOCNYgFIYF   \n",
-       "0c2zOONeNgttBOpHp8tw03  spotify:track:0c2zOONeNgttBOpHp8tw03   \n",
-       "0cjGJeCeYxNP8duvTxJJDX  spotify:track:0cjGJeCeYxNP8duvTxJJDX   \n",
-       "714JJ27SmuQEghyVauzMPj  spotify:track:714JJ27SmuQEghyVauzMPj   \n",
-       "\n",
-       "                                                               track_href  \\\n",
-       "id                                                                          \n",
-       "6KaZC1JpPRq9CNZ3X8jBCM  https://api.spotify.com/v1/tracks/6KaZC1JpPRq9...   \n",
-       "7hiqCnFcOBFAqZSf3AOY8a  https://api.spotify.com/v1/tracks/7hiqCnFcOBFA...   \n",
-       "1SxVwlqUaz6PdQSqjclahn  https://api.spotify.com/v1/tracks/1SxVwlqUaz6P...   \n",
-       "1XGX6lvmT464sVpJKTF3aV  https://api.spotify.com/v1/tracks/1XGX6lvmT464...   \n",
-       "317d1IqYa8JhV8BGVDtgwZ  https://api.spotify.com/v1/tracks/317d1IqYa8Jh...   \n",
-       "...                                                                   ...   \n",
-       "3eOVEI308JAMgXITGVFmPb  https://api.spotify.com/v1/tracks/3eOVEI308JAM...   \n",
-       "6HQ7ZkvyCDiVpOCNYgFIYF  https://api.spotify.com/v1/tracks/6HQ7ZkvyCDiV...   \n",
-       "0c2zOONeNgttBOpHp8tw03  https://api.spotify.com/v1/tracks/0c2zOONeNgtt...   \n",
-       "0cjGJeCeYxNP8duvTxJJDX  https://api.spotify.com/v1/tracks/0cjGJeCeYxNP...   \n",
-       "714JJ27SmuQEghyVauzMPj  https://api.spotify.com/v1/tracks/714JJ27SmuQE...   \n",
-       "\n",
-       "                                                             analysis_url  \\\n",
-       "id                                                                          \n",
-       "6KaZC1JpPRq9CNZ3X8jBCM  https://api.spotify.com/v1/audio-analysis/6KaZ...   \n",
-       "7hiqCnFcOBFAqZSf3AOY8a  https://api.spotify.com/v1/audio-analysis/7hiq...   \n",
-       "1SxVwlqUaz6PdQSqjclahn  https://api.spotify.com/v1/audio-analysis/1SxV...   \n",
-       "1XGX6lvmT464sVpJKTF3aV  https://api.spotify.com/v1/audio-analysis/1XGX...   \n",
-       "317d1IqYa8JhV8BGVDtgwZ  https://api.spotify.com/v1/audio-analysis/317d...   \n",
-       "...                                                                   ...   \n",
-       "3eOVEI308JAMgXITGVFmPb  https://api.spotify.com/v1/audio-analysis/3eOV...   \n",
-       "6HQ7ZkvyCDiVpOCNYgFIYF  https://api.spotify.com/v1/audio-analysis/6HQ7...   \n",
-       "0c2zOONeNgttBOpHp8tw03  https://api.spotify.com/v1/audio-analysis/0c2z...   \n",
-       "0cjGJeCeYxNP8duvTxJJDX  https://api.spotify.com/v1/audio-analysis/0cjG...   \n",
-       "714JJ27SmuQEghyVauzMPj  https://api.spotify.com/v1/audio-analysis/714J...   \n",
-       "\n",
-       "                        duration_ms  time_signature    0  \n",
-       "id                                                        \n",
-       "6KaZC1JpPRq9CNZ3X8jBCM     246933.0             4.0  NaN  \n",
-       "7hiqCnFcOBFAqZSf3AOY8a     165549.0             4.0  NaN  \n",
-       "1SxVwlqUaz6PdQSqjclahn     230000.0             4.0  NaN  \n",
-       "1XGX6lvmT464sVpJKTF3aV     229600.0             4.0  NaN  \n",
-       "317d1IqYa8JhV8BGVDtgwZ     274547.0             4.0  NaN  \n",
-       "...                             ...             ...  ...  \n",
-       "3eOVEI308JAMgXITGVFmPb     279400.0             4.0  NaN  \n",
-       "6HQ7ZkvyCDiVpOCNYgFIYF     210000.0             4.0  NaN  \n",
-       "0c2zOONeNgttBOpHp8tw03     390005.0             1.0  NaN  \n",
-       "0cjGJeCeYxNP8duvTxJJDX     124400.0             3.0  NaN  \n",
-       "714JJ27SmuQEghyVauzMPj     226893.0             4.0  NaN  \n",
-       "\n",
-       "[90100 rows x 18 columns]"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tracks_features_LG_index_df=tracks_features_df.set_index('id')\n",
-    "tracks_features_LG_index_df"
+    "# tracks_features_LG_index_df=tracks_features_df.set_index('id')\n",
+    "# tracks_features_LG_index_df"
    ]
   }
  ],
