Instructions on how to get the track data in Colab

--- a/Christophe_branch/test_get_features_API_colab_HowTo.ipynb
+++ b/Christophe_branch/test_get_features_API_colab_HowTo.ipynb
@@ -127,6 +127,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check that the length is 2,262,292\n",
+    "len(tracks_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
