Instructions on how to get the track data in Colab

--- a/Christophe_branch/test_get_features_API_colab_HowTo.ipynb
+++ b/Christophe_branch/test_get_features_API_colab_HowTo.ipynb
@@ -177,7 +177,7 @@
     "a=2000000 + 0  # In this example, the slice will start at 2,000,000\n",
     "\n",
     "# This is the end of the slice of tracks to be queried\n",
-    "b=2100000 + 1 # b=2262292 is the max value when doing the last slice"
+    "b=2100000  # b=2262292 is the max value when doing the last slice"
    ]
   },
   {
