removed api keys

--- a/Model_Validation_Playlist_model.ipynb
+++ b/Model_Validation_Playlist_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e5616a87-d9fd-4759-a946-a8212ade1861",
    "metadata": {
     "tags": []
@@ -25,17 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3ad84f9d-74c7-4fa3-8230-5368a1d83f4e",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# Load Spotify API key information into env variables\n",
-    "os.environ['SPOTIPY_CLIENT_ID']='eec42f936e1b4cfcab34e7980d9fe51e'  # \"SPOTIPY\" is not a typo\n",
-    "os.environ['SPOTIPY_CLIENT_SECRET']='2b4cb469bc554fedace8246bd14a7060'\n",
-    "os.environ['SPOTIPY_REDIRECT_URI']='http://localhost:3000'"
+    "# Load Spotify API key information into env variables. You will need to add in spotify api information\n",
+    "os.environ['SPOTIPY_CLIENT_ID']=''  # \"SPOTIPY\" is not a typo\n",
+    "os.environ['SPOTIPY_CLIENT_SECRET']=''\n",
+    "os.environ['SPOTIPY_REDIRECT_URI']=''"
    ]
   },
   {
